--- a/app/src/main/res/layout/list_item_card.xml
+++ b/app/src/main/res/layout/list_item_card.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-    >
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_margin="5dp"
+                                    android:clickable="true"
+                                    android:orientation="vertical"
+                                    android:padding="10dp"
+                                    app:cardCornerRadius="12dp"
+                                    app:cardElevation="3dp"
+                                    app:contentPadding="3dp">
 
     <LinearLayout
         android:id="@+id/llDetail"
@@ -10,20 +17,22 @@
         android:layout_height="120dp"
         android:orientation="horizontal"
         android:padding="10dp"
-        android:weightSum="3">
+        >
+
 
         <ImageView
             android:id="@+id/ivFood"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:adjustViewBounds="true"
-            android:src="@mipmap/ic_launcher"/>
+            />
+
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:orientation="vertical"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
@@ -82,56 +91,28 @@
                 android:text="ติดต่อ 082-1112321"/>
         </LinearLayout>
 
-    </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-
-        android:paddingLeft="20dp"
-        >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            >
-
-            <TextView
-                android:id="@+id/tvStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:paddingLeft="35dp"
-                android:text="เปิด"/>
-
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imgStatus"
-                android:layout_width="5dp"
-                android:layout_height="5dp"
-                android:layout_alignBaseline="@+id/tvStatus"
-                android:layout_centerInParent="true"
-                android:src="@drawable/circle_status"/>
-
+                android:id="@+id/iv_status"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_gravity="bottom"
+                android:src="@drawable/ic_status_open"/>
             <TextView
                 android:id="@+id/tvDistance"
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imgStatus"
-                android:layout_marginTop="15dp"
-                android:layout_toRightOf="@+id/imgStatus"
+                android:layout_height="0dp"
+                android:gravity="bottom"
+                android:layout_weight="1"
                 android:text="2 กม."/>
 
-        </RelativeLayout>
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_below="@+id/llDetail"
-        android:background="#aeadab">
-    </FrameLayout>
-
-
-</RelativeLayout>
+        </LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
