--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="large_font_size_tv">30sp</dimen>
+    <dimen name="large_font_size_tv">26sp</dimen>
+    <dimen name="medium_font_size_tv">20sp</dimen>
+
 </resources>
