--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="solid_one">#4abc96</color>
     <color name="solid_two">#b48045</color>
     <color name="solid_three">#f1c305</color>
+
+    <color name="text_color">#222222</color>
+    <color name="background_detail">#20fbff00</color>
+    20fbff00
 </resources>
