--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -5,46 +5,14 @@
                 android:layout_height="match_parent"
                 tools:context="com.buu.se.searchbangsaen.searchcategories.activity.DetailRestaurantActivity">
 
-    <RelativeLayout
-        android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#edbd2c">
-
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:paddingRight="15dp"
-            android:paddingTop="15dp"
-            android:src="@drawable/btn_back"/>
-
-        <TextView
-            android:id="@+id/tvNameRes"
-            style="@style/SimpleTextCloud.large.bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="ครัวป้าไหม"
-            android:textColor="#ffffffff"
-            />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="15dp"
-            android:paddingLeft="15dp"
-            android:paddingTop="15dp"
-            android:src="@drawable/btn_menu"/>
-    </RelativeLayout>
+    <include layout="@layout/toolbar"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tvTitle"
-        android:background="#40fbff00"
+        android:background="@color/background_detail"
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
@@ -86,17 +54,7 @@
                     android:stretchMode="columnWidth"
                     android:verticalSpacing="4dp"/>
 
-                <GridView
-                    android:id="@+id/gv_type_food"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:columnWidth="120dp"
-                    android:gravity="center"
-                    android:layout_below="@+id/gv_benefit"
-                    android:horizontalSpacing="1dp"
-                    android:numColumns="auto_fit"
-                    android:stretchMode="columnWidth"
-                    android:verticalSpacing="4dp"/>
+
 <!--
 
                 <TextView
@@ -114,11 +72,20 @@
                     android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/gv_type_food"
+                    android:layout_below="@+id/gv_benefit"
                     android:layout_weight="1"
                     android:text="จันทร์ - ศุกร์ 10.00 น. - 22.00 น."
                     android:textColor="#666666"
                     android:textSize="18dp"/>
+                <TextView
+                    android:id="@+id/tv_type_food"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvDate"
+                    android:layout_weight="1"
+                    android:text=""
+                    android:textColor="#666666"
+                    android:textSize="14dp"/>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
