--- a/app/src/main/res/layout/activity_show_image.xml
+++ b/app/src/main/res/layout/activity_show_image.xml
@@ -5,9 +5,10 @@
     android:id="@+id/activity_show_image"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:transitionName="shareView"
     tools:context="com.buu.se.searchbangsaen.searchcategories.activity.ShowImageActivity">
+    <include layout="@layout/toolbar"
+        />
     <ImageView
         android:id="@+id/ivItemBig"
         android:layout_centerInParent="true"
