--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,10 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="large_font_size_tv">26sp</dimen>
     <dimen name="medium_font_size_tv">20sp</dimen>
+    <dimen name="tool_bar_text_size">22sp</dimen>
 
+    <dimen name="main_screen_side_padding">10dp</dimen>
+    <dimen name="text_top_padding">25dp</dimen>
+    <dimen name="title_text_size">26sp</dimen>
+    <dimen name="tool_bar_height">56dp</dimen>
 </resources>
