--- a/app/src/main/res/layout/activity_detail_hotel.xml
+++ b/app/src/main/res/layout/activity_detail_hotel.xml
@@ -1,9 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context="com.buu.se.searchbangsaen.restaurant_categories.activity.DetailRestaurantActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_detail_hotel"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.buu.se.searchbangsaen.hotel_categories.activity.DetailHotelActivity">
 
     <include layout="@layout/toolbar"
         />
@@ -34,10 +37,11 @@
                 <TextView
                     android:id="@+id/tvName"
                     style="@style/SimpleTextCloud.large"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="ครัวน้องเบส"
+                    android:lines="1"
                     android:textColor="#656565"
                     android:textStyle="bold"/>
 
@@ -55,18 +59,18 @@
                     android:verticalSpacing="4dp"/>
 
 
-<!--
+                <!--
 
-                <TextView
-                    android:id="@+id/tvTypeFood"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/gv_benefit"
-                    android:layout_weight="1"
-                    android:text="อาหารทะเล,อาหารอีสาน,อาหารตามสั่ง"
-                    android:textColor="#666666"
-                    android:textSize="18dp"/>
--->
+                                <TextView
+                                    android:id="@+id/tvTypeFood"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@+id/gv_benefit"
+                                    android:layout_weight="1"
+                                    android:text="อาหารทะเล,อาหารอีสาน,อาหารตามสั่ง"
+                                    android:textColor="#666666"
+                                    android:textSize="18dp"/>
+                -->
 
                 <TextView
                     android:id="@+id/tvDate"
@@ -77,6 +81,7 @@
                     android:text="จันทร์ - ศุกร์ 10.00 น. - 22.00 น."
                     android:textColor="#666666"
                     android:textSize="18dp"/>
+
                 <TextView
                     android:id="@+id/tv_type_food"
                     android:layout_width="wrap_content"
@@ -225,7 +230,6 @@
         </android.support.v7.widget.CardView>
 
         <Button
-            android:id="@+id/btn_map"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginLeft="20dp"
@@ -233,5 +237,6 @@
             android:layout_weight="2"
             android:text="ปุ่มดูแผนที่ ยังไม่ได้ออกแบบ"/>
     </LinearLayout>
+
 
 </RelativeLayout>
