--- a/app/src/main/res/layout/list_item_card_hotel.xml
+++ b/app/src/main/res/layout/list_item_card_hotel.xml
@@ -21,10 +21,10 @@
 
 
         <ImageView
-            android:id="@+id/ivFood"
+            android:id="@+id/iv_hotel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:adjustViewBounds="true"
             />
 
@@ -47,69 +47,91 @@
                 android:weightSum="5">
 
                 <TextView
-                    android:id="@+id/tvName"
+                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="21dp"
                     android:layout_weight="1"
-                    android:text="ครัวป้าไหม"
+                    android:text="โรงแรม"
                     android:textColor="#848181"
-                    android:textSize="18dp"
+                    android:textSize="20sp"
                     android:textStyle="bold"/>
 
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tvDay"
+                android:id="@+id/tv_room"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="9dp"
+                android:textSize="12sp"
                 android:layout_weight="2"
-                android:text="จันทร์ - ศุกร์"/>
+                android:layout_gravity="left"
+                android:text="เหลือ 2 ห้งองสุดท้าย"/>
 
             <TextView
-                android:id="@+id/tvOpen"
+                android:id="@+id/tv_close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="2"
-                android:text="เปิด 06.00 น."/>
+               />
 
             <TextView
-                android:id="@+id/tvClose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="2"
-                android:text="ปิด  18.00 น."/>
-
-            <TextView
-                android:id="@+id/tvContact"
+                android:id="@+id/tv_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:layout_weight="2"
+                android:gravity=""
+                android:layout_gravity="bottom"
                 android:text="ติดต่อ 082-1112321"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iv_status"
+            <TextView
+                android:id="@+id/tv_price_title"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:gravity="right"
+                android:text="ราคาเริ่มต้นที่"
                 android:layout_gravity="bottom"
-                android:src="@drawable/ic_status_open"/>
+                android:textSize="14sp"
+                />
+
+            <TextView
+                android:id="@+id/tv_price_title_f"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="top"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="2,500"
+                android:textSize="18sp"
+                />
+
+            <TextView
+                android:id="@+id/tv_price_title_t"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="THB 1,500"
+                android:textSize="18sp"
+                />
+
+
             <TextView
                 android:id="@+id/tvDistance"
-                android:layout_gravity="center"
+                android:layout_gravity="right"
+                android:gravity="bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:gravity="bottom"
                 android:layout_weight="1"
                 android:text="2 กม."/>
 
