--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,6 +39,8 @@
         <item name="fontPath">fonts/cloud/Cloud-Light.otf</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <!--<style name="BtnSubmitAtBottom" parent="buttonThemeDVStyle">-->
         <!--<item name="android:layout_centerInParent">true</item>-->
         <!--<item name="android:layout_alignParentBottom">true</item>-->
