--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/activity_main"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical"
+                android:background="@drawable/grdnt"
               >
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_landing"
+        android:alpha="0.3"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#edbd2c">
+        android:background="#009a9a">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/civ_search"
@@ -21,38 +31,29 @@
             android:layout_marginLeft="10dp"
             />
         <TextView
+            style="@style/SimpleTextCloud.medium.bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Search Bangsean"
             android:layout_toRightOf="@id/civ_search"
             android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginLeft="10dp"
             android:textSize="20dp"
             android:textStyle="bold"
             />
         <TextView
+            style="@style/SimpleTextCloud.medium.bold"
             android:id="@+id/tv_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="เข้าสู่ระบบ"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginRight="10dp"
             />
-        <TextView
-            android:id="@+id/tv_report"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/tv_login"
-            android:text="Report"
-            android:textStyle="bold"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:textSize="20dp"
-            />
-
 
 
     </RelativeLayout>
@@ -63,163 +64,188 @@
         android:textSize="30sp"
         android:paddingTop="10dp"
         android:textStyle="bold"
+        android:textColor="@color/accent_White"
         android:gravity="center"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
+        android:paddingTop="10dp"
         android:orientation="horizontal"
-        android:layout_weight="2"
+
         >
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:orientation="vertical"
             >
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/btn_Restaurant"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/bg_landing"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"/>
+                android:src="@drawable/img_restaurant"
+                android:layout_gravity="center"
+                android:background="@drawable/bg_circle"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_Restaurant"
-                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/accent_White"
                 android:text="ร้านอาหาร"
                 android:textSize="20sp"/>
-        </RelativeLayout>
+        </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/btn_Hotel"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/bg_landing"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"/>
+                android:src="@drawable/img_hotel"
+                android:layout_gravity="center"
+                android:background="@drawable/bg_circle"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_Hotel"
                 android:layout_centerHorizontal="true"
                 android:text="โรงแรม"
+                android:textColor="@color/accent_White"
+                android:layout_gravity="center"
                 android:layout_marginTop="5dp"
                 android:textSize="20sp"/>
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:orientation="horizontal"
-        android:layout_weight="2"
         >
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:orientation="vertical"
             >
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/btn_Coffee"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/bg_landing"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"/>
+                android:src="@drawable/img_coffee"
+                android:layout_gravity="center"
+                android:background="@drawable/bg_circle"
+               />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_Coffee"
                 android:layout_centerHorizontal="true"
+                android:textColor="@color/accent_White"
                 android:layout_marginTop="5dp"
+                android:layout_gravity="center"
                 android:text="ร้านกาแฟ"
                 android:textSize="20sp"/>
-        </RelativeLayout>
+        </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_Gift"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/bg_landing"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"/>
+                android:src="@drawable/img_gift"
+                android:layout_gravity="center"
+                android:background="@drawable/bg_circle"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/img_Gift"
                 android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/accent_White"
                 android:text="ร้านของฝาก"
                 android:textSize="20sp"/>
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:orientation="horizontal"
-        android:layout_weight="2"
         >
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:orientation="vertical"
             >
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/btn_Ws"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/bg_landing"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"/>
+                android:src="@drawable/img_walking"
+                android:background="@drawable/bg_circle"
+                android:layout_gravity="center"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_Ws"
                 android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/accent_White"
                 android:text="ถนนคนเดิน"
                 android:textSize="20sp"/>
-        </RelativeLayout>
+        </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_Festival"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/bg_landing"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"/>
+                android:src="@drawable/img_travel"
+                android:background="@drawable/bg_circle"
+                android:layout_gravity="center"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/img_Festival"
                 android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/accent_White"
                 android:text="แหล่งท่องเที่ยว"
                 android:textSize="20sp"/>
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
