--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,10 +1,40 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.buu.se.searchbangsaen.auth.fragment.LoginFragment"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                tools:context="com.buu.se.searchbangsaen.auth.fragment.LoginFragment"
                 android:background="@drawable/grdnt">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_landing"
+        android:alpha="0.3"
+        />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_marginTop="20dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:src="@drawable/icon_user_login"
+            app:civ_border_width="4dp"
+            app:civ_border_color="#ffffff"/>
+        <TextView
+            style="@style/SimpleTextCloud.large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Search Bangsean"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/accent_White"
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +60,7 @@
                     android:id="@+id/et_user"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Username"
+                    android:hint="ชื่อผู้ใช้งาน"
                     android:textColorHint="#d9e5f3"
                     android:layout_marginLeft="15dp"
                     android:background="#00000000"
@@ -58,7 +88,7 @@
                     android:id="@+id/et_pass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="รหัสผ่าน"
                     android:textColorHint="#d9e5f3"
                     android:layout_marginLeft="15dp"
                     android:background="#00000000"
@@ -82,11 +112,12 @@
         android:gravity="bottom"
         android:layout_marginBottom="20dp">
         <Button
+            style="@style/SimpleTextCloud"
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#009a9a"
-            android:text="Login"
+            android:text="เข้าสู่ระบบ"
             android:textColor="#d9e5f3"
             android:textStyle="bold"
             android:gravity="center"
@@ -95,6 +126,7 @@
             android:layout_marginBottom="20dp"
             android:letterSpacing="0.2"/>
         <Button
+            style="@style/SimpleTextCloud"
             android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -112,30 +144,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Forgot Password?"
+            android:text="ลืมรหัสผ่าน?"
             android:textColor="#d9e5f3"
             android:letterSpacing="0.1"/>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_marginBottom="400dp">
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/search_user"
-            />
-        <TextView
-            style="@style/SimpleTextCloud.large"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Search Bangsean"
-            android:textColor="@color/accent_White"
-            />
-
-    </LinearLayout>
-
 
 </RelativeLayout>
