--- a/app/src/main/res/layout/fragment_register_picture.xml
+++ b/app/src/main/res/layout/fragment_register_picture.xml
@@ -1,23 +1,126 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-              android:orientation="vertical"
-             tools:context="com.buu.se.searchbangsaen.auth.fragment.RegisterPictureFragment">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:orientation="vertical"
+                android:background="@drawable/grdnt"
+                tools:context="com.buu.se.searchbangsaen.auth.fragment.RegisterPictureFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_gravity="center"
-        android:layout_margin="50dp"
-        android:layout_width="wrap_content"
+
+    <View
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_landing"
+        android:alpha="0.3"
+        />
+
+    <RelativeLayout
+        android:id="@+id/rl_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#009a9a">
+        <TextView
+            android:id="@+id/txt_level1"
+            style="@style/SimpleTextCloud.medium.bold"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="ขั้นตอนที่ 3 "
+            />
+        <ImageView
+            android:id="@+id/imv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:paddingLeft="10dp"
+            android:src="@drawable/btn_back_arrow_white"/>
+
+    </RelativeLayout>
+
+    <TextView
+        style="@style/SimpleTextCloud.large.bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl_appbar"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="upload pic"/>
+        android:text="กรุณาใส่รูปภาพ"
+        android:textColor="@color/accent_White"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/add_img"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
+            android:padding="2dp"
+            android:background="@drawable/broder_img"
+            android:src="@drawable/img_tom"
+
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            >
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/icon_pencil"/>
+            <TextView
+                style="@style/SimpleTextCloud"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="เลือกรูปภาพ"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/accent_White"/>
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/icon_delete"
+                android:layout_marginLeft="20dp"/>
+            <TextView
+                style="@style/SimpleTextCloud"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ลบรูปภาพ"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/accent_White"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"
+        android:gravity="center"
+        >
     <Button
         android:id="@+id/btn_create"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="240dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:text="create data"/>
+        android:background="#009a9a"
+        android:text="ตกลง"/>
 
-</LinearLayout>
+    </RelativeLayout>
+
+</RelativeLayout>
